@@ -4305,7 +4305,7 @@ document; otherwise, it is moved to the last line of the screen.
 @subsection AdjustView
 @cmindex AdjustView
 
-@noindent Syntax: @code{AdjustView [T|C|B|L|M|R]}@*
+@noindent Syntax: @code{AdjustView [T|C|B|L|M|R] [@var{n}]}@*
 @noindent Abbreviation: @code{AV}
 
 @noindent shifts the view (text visible in the terminal window)
@@ -4321,10 +4321,16 @@ respectively.
 @samp{L}, @samp{M}, and @samp{R} cause horizontal shifts, making the
 current column the left-most, middle, or right-most visible positions.
 
+A optional number @var{n} immediately after @samp{T}, @samp{B},
+@samp{L}, or @samp{R} indicate the number or rows or columns to shift
+the view toward the top, bottom, left, or right of the window.
+
 Horizontal and vertical adjustment specifications may be combined,
 so that for example @samp{AdjustView TL} shifts the view so
 that the current position becomes the top left-most character on
-screen (within the limits of the current @sc{tab} size).
+screen (within the limits of the current @sc{tab} size). Likewise,
+@samp{AdjustView B3R5} shifts the view three lines toward the bottom and
+five columns (excepting @sc{tab} size) toward the right.
 
 
 
